<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Saved_Cocktails"
        android:title="@string/nav_item_saved_cocktails" />

    <item android:title="@string/nav_title_inspire_me">
        <menu>
            <item
                android:id="@+id/nav_randomixer"
                android:title="@string/nav_item_randomixer" />
        </menu>
    </item>

    <item android:title="@string/nav_title_alcoholic">
        <menu>
            <item
                android:id="@+id/nav_Alcoholic"
                android:state_activated="true"
                android:title="@string/nav_item_alcoholic" />
            <item
                android:id="@+id/nav_Non_Alcoholic"
                android:state_activated="true"
                android:title="@string/nav_item_non_alcoholic" />
        </menu>
    </item>




</menu>
